--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/src/pages/homepage.css">
     <script src="https://kit.fontawesome.com/cb91afed1c.js" crossorigin="anonymous"></script>
     <title>Calisthetics Shop</title>
 </head>
 
 <body>
     <main>
+
+
         <!-- Header navigation -->
         <div class="container-header">
             <header class="header">
@@ -20,33 +22,109 @@
                     <a class="btn btn-link" href="#">Shop</a>
                 </div>
                 <div class="header-search">
-						<i class="fa fa-search fa-md" aria-hidden="true"></i>
-						<input type="text" class="search-bar" placeholder="Search">
+                    <i class="fa fa-search fa-md" aria-hidden="true"></i>
+                    <input type="text" class="search-bar" placeholder="Search">
                 </div>
-                <div class="header-right-side">
-
-                        <i class="far fa-user-circle fa-2x" aria-hidden="true"></i>
-                        <i class="far fa-heart fa-2x badge-parent" aria-hidden="true">
-                            <span class="badge-content badge-itself">5</span>
-                        </i>
+                <div class="header-right-side flex-center">
+                    <a href="#">
+                        <button class="btn btn-link">
+                            <i class="far fa-user-circle fa-2x badge-icon" aria-hidden="true">
+                            </i>
+                        </button>
+                    </a>
+                    <a href="#">
+                        <button class="btn btn-link">
+                            <i class="fas fa-shopping-basket fa-2x badge-icon" aria-hidden="true">
+                                <span class="badge-content flex-center">2</span>
+                            </i>
+                        </button>
+                    </a>
+                    <a href="#">
+                        <button class="btn btn-link">
+                            <i class="far fa-heart fa-2x badge-icon" aria-hidden="true">
+                                <span class="badge-content flex-center">8</span>
+                            </i>
+                        </button>
+                    </a>
 
                 </div>
             </header>
         </div>
 
         <!-- Hero Section -->
-        <div class="hero-section img-responsive">
-
+        <div class="hero-section">
+            <div class="hero-img hero-1 flex-center">
+                <img class="" src="/src/assets/hero-image.jpg" alt="Hero Section Image"></img>
+                <div class="hero-overlay flex-column">
+                    <h1>WORK ETHICS OF ATHELETE</h1>
+                    <div class="text-md-size margin-tb-sm">find the right attitude and products of top fitness coach
+                    </div>
+                    <button class="btn btn-primary">Shop Accessories</button>
+                </div>
+            </div>
         </div>
 
         <!-- Featured Category -->
-        <div class="featured-category">
+        <div class="featured-category flex-column">
+            <div class="flex-column padder-md">
+                <p class="h1">Featured Category</p>
+                <p class="text-rg-size">Check out our favourite categories for your fitness</p>
+            </div>
+            <div class="grid grid-2 ">
+                <div class="flex-column category-item">
+                    <img class="category-item-img" src="/src/assets/apparel-2.jpg" alt="Apparel"></img>
+                    <p class="text-lg-size text-bold">APPAREL</p>
+                </div>
+                <div class="flex-column category-item">
+                    <img class="category-item-img" src="/src/assets/equipment.jpg" alt="Equipment"></img>
+                    <p class="text-lg-size text-bold">TRAINING EQUIPMENT</p>
+                </div>
+            </div>
+        </div>
 
+        <!-- New Release -->
+        <div class="featured-category flex-column">
+            <div class="flex-column padder-md">
+                <p class="h1">New Release</p>
+                <p class="text-rg-size">Check out our new release, The quickest way to top shape</p>
+            </div>
+            <div class="grid grid-3 ">
+                <div class="flex-column category-item">
+                    <img class="category-item-img" src="/src/assets/new-release-1.jpg" alt="Dip Station"></img>
+                    <p class="text-lg-size text-bold">CALISTHETICS DIP STATION</p>
+                </div>
+                <div class="flex-column category-item">
+                    <img class="category-item-img" src="/src/assets/new-release-2.png" alt="pull up bar"></img>
+                    <p class="text-lg-size text-bold text-align-center">WALL MOUNTED PULL UP BAR</p>
+                </div>
+                <div class="flex-column category-item">
+                    <img class="category-item-img" src="/src/assets/new-release-3.png" alt="weighted vest"></img>
+                    <p class="text-lg-size text-bold">WEIGHTED VEST (10KG WT)</p>
+                </div>
+            </div>
         </div>
 
         <!-- Footer -->
-        <footer class="footer">
-
+        <footer class="page-footer dark-bg flex-column padder-tb-lg">
+            <p>Made with ♥ by Al Hera Ahmad</p>
+            <ul class="list-deco-none margin-tb-md">
+                <li class="list-inline">
+                    <a href="https://twitter.com/gentleshah" target="_blank">
+                        <i class="fab fa-twitter text-lg-size"></i>
+                    </a>
+                </li>
+                <li class="list-inline padder-lr-md">
+                    <a href="https://github.com/iamalhera" target="_blank">
+                        <i class="fab fa-github text-lg-size"></i>
+                    </a>
+                </li>
+                <li class="list-inline">
+                    <a href="https://www.linkedin.com/in/gentleshah/" target="_blank">
+                        <i class="fab fa-linkedin text-lg-size"></i>
+                    </a>
+                </li>
+            </ul>
+            <p class="margin-sm">© 2021 Cali Shop </p>
         </footer>
 
     </main>
