fix : changed tag and variable names as per given reviews

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <img class="" src="/src/assets/hero-image.jpg" alt="Hero Section Image"></img>
                 <div class="hero-overlay flex-column">
                     <h1>WORK ETHICS OF ATHELETE</h1>
-                    <div class="text-md-size margin-tb-sm">find the right attitude and products of top fitness coach
-                    </div>
+                    <p class="text-md-size margin-tb-sm">find the right attitude and products of top fitness coach
+                    </p>
                     <button class="btn btn-primary">Shop Accessories</button>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         <!-- Featured Category -->
         <div class="featured-category flex-column">
             <div class="flex-column padder-md">
-                <p class="h1">Featured Category</p>
+                <h1>Featured Category</h1>
                 <p class="text-rg-size">Check out our favourite categories for your fitness</p>
             </div>
             <div class="grid grid-2 ">
@@ -85,7 +85,7 @@
         <!-- New Release -->
         <div class="featured-category flex-column">
             <div class="flex-column padder-md">
-                <p class="h1">New Release</p>
+                <h1>New Release</h1>
                 <p class="text-rg-size">Check out our new release, The quickest way to top shape</p>
             </div>
             <div class="grid grid-3 ">
