feat : added signup page

--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main class="sign-main-container">
+    <main class="signin-main-container">
 
 
         <!-- Header navigation -->
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="form-footer">
-                    <a href="#" class="new-ac-link">Don't have an Account.<i class="fas fa-chevron-right" aria-hidden="true"></i></a>
+                    <a href="/src/pages/signup/signup.html" class="new-ac-link">Don't have an Account.<i class="fas fa-chevron-right" aria-hidden="true"></i></a>
                 </div>
             </form>
         </div>
