fix : added links

--- a/src/pages/Profile/profile.html
+++ b/src/pages/Profile/profile.html
@@ -80,8 +80,8 @@
                 </div>
             </div>
             <div class="btn-palletes">
-                <a class="btn btn-link " href="#">Switch to another Acount</a>
-                <a class="btn btn-link " href="#">Logout</a>
+                <a class="btn btn-link " href="/src/pages/signin/signin.html">Switch to another Acount</a>
+                <a class="btn btn-link " href="/src/pages/signup/signup.html">Logout</a>
             </div>
         </div>
         </div>
