--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -26,7 +26,7 @@
                     <input type="text" class="search-bar" placeholder="Search">
                 </div>
                 <div class="header-right-side flex-center">
-                    <a href="#">
+                    <a href="/src/pages/Profile/profile.html">
                         <button class="btn btn-link">
                             <i class="far fa-user-circle fa-2x badge-icon" aria-hidden="true">
                             </i>
