fix : added links and edited text decoration

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <header class="header">
                 <div class="header-left-side">
                     <a class="font-logo btn-link" href="/index.html">Cali Shop</a>
-                    <a class="btn btn-link" href="#">Shop</a>
+                    <a class="btn btn-link" href="/src/pages/product-page/product-page.html">Shop</a>
                 </div>
                 <div class="header-search">
                     <i class="fa fa-search fa-md" aria-hidden="true"></i>
@@ -59,7 +59,7 @@
                     <h1>WORK ETHICS OF ATHELETE</h1>
                     <div class="text-md-size margin-tb-sm">find the right attitude and products of top fitness coach
                     </div>
-                    <button class="btn btn-primary">Shop Accessories</button>
+                    <a href="/src/pages/product-page/product-page.html" class="btn btn-primary text-deco-none">Shop Accessories</a>
                 </div>
             </div>
         </div>
