--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -19,7 +19,7 @@
             <header class="header">
                 <div class="header-left-side">
                     <a class="font-logo btn-link" href="/index.html">Cali Shop</a>
-                    <a class="btn btn-link" href="#">Shop</a>
+                    <a class="btn btn-link" href="/src/pages/product-page/product-page.html">Shop</a>
                 </div>
                 <div class="header-search">
                     <i class="fa fa-search fa-md" aria-hidden="true"></i>
