--- a/src/pages/wishlist/wishlist.html
+++ b/src/pages/wishlist/wishlist.html
@@ -18,8 +18,8 @@
         <div class="container-header">
             <header class="header">
                 <div class="header-left-side">
-                    <a class="font-logo btn-link" href="/index.html">Cali Shop</a>
-                    <a class="btn btn-link" href="#">Shop</a>
+                    <a class="font-logo" href="/index.html">Cali Shop</a>
+                    <a class="btn btn-link" href="/src/pages/product-page/product-page.html">Shop</a>
                 </div>
                 <div class="header-search">
                     <i class="fa fa-search fa-md" aria-hidden="true"></i>
