--- a/src/pages/Profile/profile.html
+++ b/src/pages/Profile/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/pages/Profile/profile.css">
     <script src="https://kit.fontawesome.com/cb91afed1c.js" crossorigin="anonymous"></script>
-    <title>Calisthetics Shop</title>
+    <title>User Profile</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <div class="container-header">
             <header class="header">
                 <div class="header-left-side">
-                    <a class="font-logo btn-link" href="/index.html">Cali Shop</a>
+                    <a class="font-logo" href="/index.html">Cali Shop</a>
                     <a class="btn btn-link" href="/src/pages/product-page/product-page.html">Shop</a>
                 </div>
                 <div class="header-search">
@@ -39,7 +39,7 @@
                             </i>
                         </button>
                     </a>
-                    <a href="#">
+                    <a href="/src/pages/wishlist/wishlist.html">
                         <button class="btn btn-link">
                             <i class="far fa-heart fa-2x badge-icon" aria-hidden="true">
                                 <span class="badge-content flex-center">8</span>
