--- a/src/pages/product-page/product-page.html
+++ b/src/pages/product-page/product-page.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/pages/product-page/product-page.css">
     <script src="https://kit.fontawesome.com/cb91afed1c.js" crossorigin="anonymous"></script>
-    <title>Calisthetics Shop</title>
+    <title>Products</title>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                             </i>
                         </button>
                     </a>
-                    <a href="#">
+                    <a href="/src/pages/wishlist/wishlist.html">
                         <button class="btn btn-link">
                             <i class="far fa-heart fa-2x badge-icon" aria-hidden="true">
                                 <span class="badge-content flex-center">8</span>
