--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -18,7 +18,7 @@
         <div class="container-header">
             <header class="header">
                 <div class="header-left-side">
-                    <a class="font-logo btn-link" href="/index.html">Cali Shop</a>
+                    <a class="font-logo" href="/index.html">Cali Shop</a>
                     <a class="btn btn-link" href="/src/pages/product-page/product-page.html">Shop</a>
                 </div>
                 <div class="header-search">
@@ -39,7 +39,7 @@
                             </i>
                         </button>
                     </a>
-                    <a href="#">
+                    <a href="/src/pages/wishlist/wishlist.html">
                         <button class="btn btn-link">
                             <i class="far fa-heart fa-2x badge-icon" aria-hidden="true">
                                 <span class="badge-content flex-center">8</span>
