refactor : shortened class name as per suggestion

--- a/src/pages/cart-page/cart.html
+++ b/src/pages/cart-page/cart.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main class="cart-management-main-container">
+    <main class="cart-main-container">
 
 
         <!-- Header navigation -->
