--- a/src/pages/cart-page/cart.html
+++ b/src/pages/cart-page/cart.html
@@ -118,13 +118,13 @@
                     
                     <div class="card padder-sm billing-card">
                         <div class="flex-row padder-sm space-bw">
-                            <label class="text-md-size text-bold">Price (2) </label>
-                            <label class="text-md-size">Rs. 3000</label>
+                            <label class="text-md-size text-bold">Price (2 items) </label>
+                            <label class="text-md-size">Rs. 3499</label>
                         </div>
 
                         <div class="flex-row padder-sm space-bw">
                             <label class="text-md-size text-bold">Discount</label>
-                            <label class="text-md-size">Rs. 500</label>
+                            <label class="text-md-size">Rs. 499</label>
                         </div>
 
                         <div class="flex-row padder-sm space-bw">
@@ -134,7 +134,7 @@
                         <hr>
                         <div class="flex-row padder-sm space-bw">
                             <label class="text-lg-size text-bold">Total Amount</label>
-                            <label class="text-md-size text-bold">Rs. 2550</label>
+                            <label class="text-md-size text-bold">Rs. 3050</label>
                         </div>
                         <button class="btn btn-primary btn-place-order margin-lr-lg">Place Order</button>
                     </div>
