--- a/src/pages/product-page/product-page.html
+++ b/src/pages/product-page/product-page.html
@@ -32,7 +32,7 @@
                             </i>
                         </button>
                     </a>
-                    <a href="#">
+                    <a href="/src/pages/cart-page/cart.html">
                         <button class="btn btn-link">
                             <i class="fas fa-shopping-basket fa-2x badge-icon" aria-hidden="true">
                                 <span class="badge-content flex-center">2</span>
