refactor : hero section and card height

--- a/src/pages/Profile/profile.html
+++ b/src/pages/Profile/profile.html
@@ -93,9 +93,9 @@
 
 
         <!-- Footer -->
-        <footer class="page-footer dark-bg flex-column padder-tb-lg">
+        <footer class="page-footer dark-bg flex-column padder-tb-sm">
             <p>Made with ♥ by Al Hera Ahmad</p>
-            <ul class="list-deco-none margin-tb-md">
+            <ul class="list-deco-none margin-tb-sm">
                 <li class="list-inline">
                     <a href="https://twitter.com/gentleshah" target="_blank">
                         <i class="fab fa-twitter text-lg-size"></i>
